# launch-foundry

./: .gitignore  README.md  index.html  package-lock.json  package.json  start-launchfoundry.bat  stop-launchfoundry.bat
.claude/: launch.json
engine/: .lf-engine-placeholder
prompts/: 01_brand_reader.md  02_asset_scanner.md  03_audience_strategy.md  04_platform_strategy_facebook.md  05_campaign_concept_generator.md  06_storyboard_writer.md  07_render_spec_writer.md  08_publishing_pack_writer.md  09_qa_checker.md
scripts/: prepare-engine-bundle.ps1
src/: App.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.tsx  AskForHelp.tsx  BusinessTypePicker.tsx  Card.tsx  ConfirmDialog.tsx  JsonViewer.tsx  ScorePill.tsx  SendToAI.tsx  WelcomeScreen.tsx  WizardShell.tsx
src/data/: mockAssets.ts  mockBrand.ts  mockCampaigns.ts
src/lib/: auditPrompt.ts  brandExtract.ts  brandFromScan.ts  businessTypes.ts  codeReviewParser.ts  exportJson.ts  folderScan.ts  imagePrompt.ts  importCampaign.ts  musicPrompt.ts  pickForMe.ts  pipeline.test.ts  platformPack.ts  preferences.ts  projectHome.ts  prompts.ts  qa.ts  reelsAdapter.ts  renderSpec.ts  scanContext.ts  scheduleExport.ts  storage.ts  studioDesignPrompt.ts  studioScript.ts  tauriBridge.ts  templateUtils.ts  urlSource.ts  voice.ts
src/pages/: BrandProfilePage.tsx  CampaignPromptPage.tsx  ConceptsPage.tsx  MusicPage.tsx  PlatformsPage.tsx  ProjectScanPage.tsx  ProjectsPage.tsx  (+8 more)
(+8 files in other folders)
