[package]
name = "launchfoundry-lite"
version = "0.1.0"
description = "LaunchFoundry Reels Studio — desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "launchfoundry_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
base64 = "0.22"
